--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ body {
 	--_fontsize: clamp(36px, 7vw, 7rem);
 	--_height: calc(var(--_fontsize) * 1.3);
 	--_margin-size: calc(
-		50vh - var(--_height) * 0.5 - 0.5 * var(--bean-size) - 0.5 *
+		50vh - var(--_height) * 0.5 - 0.5 * var(--bean-size) -
 			var(--divider-border-size)
 	);
 	position: sticky;
@@ -77,16 +77,22 @@ body {
 	padding: 0.5rem;
 }
 
-.divider {
-	background-image: url(img/coffee-bean-filled-roast-brew-svgrepo-com.svg);
-	background-color: var(--accent-yellow);
+.divider-upper {
+	background-image: url(img/coffee-bean-upper.svg);
+	background-color: var(--bg-dark);
 	background-repeat: repeat;
 	background-size: var(--bean-size);
 	width: 100%;
-	height: calc(2 * var(--bean-size));
+	height: var(--bean-size);
+}
 
-	border-top: var(--divider-border-size) solid var(--bg-light);
-	border-bottom: var(--divider-border-size) solid var(--bg-dark);
+.divider-lower {
+	background-image: url(img/coffee-bean-lower.svg);
+	background-color: var(--bg-light);
+	background-repeat: repeat;
+	background-size: var(--bean-size);
+	width: 100%;
+	height: var(--bean-size);
 }
 
 .contacts {
@@ -116,7 +122,7 @@ body {
 }
 
 .cr {
-	color: var(--accent-yellow);
+	color: var(--accent-orange);
 	text-align: center;
 	padding: 0.5rem 0 2rem 0;
 }
