--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ body {
 	height: var(--_height);
 
 	text-align: center;
-	letter-spacing: 3%;
+	letter-spacing: 0.3rem;
 
 	margin: var(--_margin-size) 0;
 
