--- a/src/output.css
+++ b/src/output.css
@@ -576,11 +576,6 @@ video {
   margin-right: 1rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -593,16 +588,8 @@ video {
   margin-top: 1rem;
 }
 
-.box-border {
-  box-sizing: border-box;
-}
-
 .flex {
   display: flex;
-}
-
-.grid {
-  display: grid;
 }
 
 .hidden {
@@ -619,42 +606,6 @@ video {
 
 .flex-grow {
   flex-grow: 1;
-}
-
-.grid-rows-\[10\%_5\%_auto_5\%\] {
-  grid-template-rows: 10% 5% auto 5%;
-}
-
-.grid-rows-\[10\%_5\%_auto_10\%\] {
-  grid-template-rows: 10% 5% auto 10%;
-}
-
-.grid-rows-\[10\%_15\%_auto_10\%\] {
-  grid-template-rows: 10% 15% auto 10%;
-}
-
-.grid-rows-\[10\%_15\%_auto_fit\] {
-  grid-template-rows: 10% 15% auto fit;
-}
-
-.grid-rows-\[10\%_15\%_auto_5\%\] {
-  grid-template-rows: 10% 15% auto 5%;
-}
-
-.grid-rows-\[10\%_15\%_auto_fit-content\] {
-  grid-template-rows: 10% 15% auto fit-content;
-}
-
-.grid-rows-\[10\%_fit_auto_fit\] {
-  grid-template-rows: 10% fit auto fit;
-}
-
-.grid-rows-\[10\%_auto_auto_auto\] {
-  grid-template-rows: 10% auto auto auto;
-}
-
-.flex-row {
-  flex-direction: row;
 }
 
 .flex-col {
@@ -674,12 +625,12 @@ video {
        column-gap: 0.5rem;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-x-2 {
@@ -711,23 +662,18 @@ video {
   padding-right: 2rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-2xl {
@@ -739,43 +685,12 @@ video {
   font-weight: 700;
 }
 
-.\*\:my-2 > * {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.\*\:my-1 > * {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}
-
-.\*\:mr-4 > * {
-  margin-right: 1rem;
-}
-
-.\*\:mb-1 > * {
-  margin-bottom: 0.25rem;
-}
-
-.\*\:mt-1 > * {
-  margin-top: 0.25rem;
-}
-
-.\*\:mb-3 > * {
-  margin-bottom: 0.75rem;
-}
-
-.\*\:mb-4 > * {
-  margin-bottom: 1rem;
-}
-
 .\*\:mb-2 > * {
   margin-bottom: 0.5rem;
 }
 
-.\*\:bg-slate-50 > * {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+.\*\:mt-1 > * {
+  margin-top: 0.25rem;
 }
 
 .\*\:bg-gray-50 > * {
@@ -783,63 +698,14 @@ video {
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.after\:absolute::after {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.after\:-z-10::after {
-  content: var(--tw-content);
-  z-index: -10;
-}
-
-.after\:border-4::after {
-  content: var(--tw-content);
-  border-width: 4px;
-}
-
-.after\:border-blue-400::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity));
-}
-
-.after\:border-red-500::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.after\:px-4::after {
-  content: var(--tw-content);
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.after\:py-2::after {
-  content: var(--tw-content);
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.hover\:bg-red-900:hover {
+.hover\:bg-black:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(127 29 29 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#00e8fc\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 232 252 / var(--tw-bg-opacity));
-}
-
-.hover\:text-gray-50:hover {
+.hover\:text-white:hover {
   --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity));
-}
-
-.hover\:text-black:hover {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -847,17 +713,12 @@ video {
     flex-direction: row;
   }
 
-  .sm\:\*\:my-2 > * {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+  .sm\:\*\:mb-3 > * {
+    margin-bottom: 0.75rem;
   }
 
   .sm\:\*\:mr-4 > * {
     margin-right: 1rem;
-  }
-
-  .sm\:\*\:mb-3 > * {
-    margin-bottom: 0.75rem;
   }
 }
 
@@ -870,42 +731,8 @@ video {
     max-width: 60%;
   }
 
-  .md\:grid-rows-\[10\%_5\%_auto_5\%\] {
-    grid-template-rows: 10% 5% auto 5%;
-  }
-
-  .md\:grid-rows-\[10\%_5\%_auto_10\%\] {
-    grid-template-rows: 10% 5% auto 10%;
-  }
-
-  .md\:grid-rows-\[10\%_5\%_auto_fit\] {
-    grid-template-rows: 10% 5% auto fit;
-  }
-
-  .md\:grid-rows-\[10\%_5\%_auto_fit-content\] {
-    grid-template-rows: 10% 5% auto fit-content;
-  }
-
-  .md\:grid-rows-\[10\%_5\%_auto_auto\] {
-    grid-template-rows: 10% 5% auto auto;
-  }
-
-  .md\:grid-rows-\[10\%_auto_auto_auto\] {
-    grid-template-rows: 10% auto auto auto;
-  }
-
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
   }
 
   .md\:text-3xl {
@@ -913,35 +740,22 @@ video {
     line-height: 2.25rem;
   }
 
-  .md\:text-\[\#00e8fc\] {
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .md\:text-black {
     --tw-text-opacity: 1;
-    color: rgb(0 232 252 / var(--tw-text-opacity));
-  }
-
-  .md\:\*\:my-2 > * {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-  }
-
-  .md\:\*\:mb-2 > * {
-    margin-bottom: 0.5rem;
+    color: rgb(0 0 0 / var(--tw-text-opacity));
   }
 
   .md\:\*\:mt-2 > * {
     margin-top: 0.5rem;
   }
-
-  .md\:\*\:mb-4 > * {
-    margin-bottom: 1rem;
-  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
