--- a/src/output.css
+++ b/src/output.css
@@ -666,6 +666,11 @@ video {
   border-color: rgb(28 25 23 / var(--tw-border-opacity));
 }
 
+.border-\[\#020a04\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(2 10 4 / var(--tw-border-opacity));
+}
+
 .bg-stone-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 249 / var(--tw-bg-opacity));
@@ -674,6 +679,16 @@ video {
 .bg-stone-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(28 25 23 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#fbfef9\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 254 249 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#020a04\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 10 4 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -728,6 +743,11 @@ video {
   color: rgb(68 64 60 / var(--tw-text-opacity));
 }
 
+.text-\[\#f49097\] {
+  --tw-text-opacity: 1;
+  color: rgb(244 144 151 / var(--tw-text-opacity));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -745,9 +765,24 @@ video {
   background-color: rgb(28 25 23 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#020a04\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 10 4 / var(--tw-bg-opacity));
+}
+
 .hover\:text-stone-50:hover {
   --tw-text-opacity: 1;
   color: rgb(250 250 249 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#fbfef9\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(251 254 249 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#f49097\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(244 144 151 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -827,6 +862,11 @@ video {
     border-color: rgb(250 250 249 / var(--tw-border-opacity));
   }
 
+  .dark\:border-\[\#fbfef9\] {
+    --tw-border-opacity: 1;
+    border-color: rgb(251 254 249 / var(--tw-border-opacity));
+  }
+
   .dark\:bg-stone-50 {
     --tw-bg-opacity: 1;
     background-color: rgb(250 250 249 / var(--tw-bg-opacity));
@@ -835,6 +875,16 @@ video {
   .dark\:bg-stone-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(28 25 23 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-\[\#020a04\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(2 10 4 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-\[\#fbfef9\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(251 254 249 / var(--tw-bg-opacity));
   }
 
   .dark\:text-stone-50 {
@@ -847,14 +897,34 @@ video {
     color: rgb(68 64 60 / var(--tw-text-opacity));
   }
 
+  .dark\:text-\[\#fbfef9\] {
+    --tw-text-opacity: 1;
+    color: rgb(251 254 249 / var(--tw-text-opacity));
+  }
+
   .dark\:hover\:bg-stone-50:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(250 250 249 / var(--tw-bg-opacity));
   }
 
+  .dark\:hover\:bg-\[\#fbfef9\]:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(251 254 249 / var(--tw-bg-opacity));
+  }
+
   .dark\:hover\:text-stone-900:hover {
     --tw-text-opacity: 1;
     color: rgb(28 25 23 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:text-\[\#020a04\]:hover {
+    --tw-text-opacity: 1;
+    color: rgb(2 10 4 / var(--tw-text-opacity));
+  }
+
+  .hover\:dark\:text-\[\#f49097\]:hover {
+    --tw-text-opacity: 1;
+    color: rgb(244 144 151 / var(--tw-text-opacity));
   }
 }
 
@@ -863,9 +933,19 @@ video {
   background-color: rgb(250 250 249 / var(--tw-bg-opacity));
 }
 
+.\[\&\>a\]\:bg-\[\#fbfef9\]>a {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 254 249 / var(--tw-bg-opacity));
+}
+
 @media (prefers-color-scheme: dark) {
   .dark\:\[\&\>a\]\:bg-stone-900>a {
     --tw-bg-opacity: 1;
     background-color: rgb(28 25 23 / var(--tw-bg-opacity));
+  }
+
+  .dark\:\[\&\>a\]\:bg-\[\#020a04\]>a {
+    --tw-bg-opacity: 1;
+    background-color: rgb(2 10 4 / var(--tw-bg-opacity));
   }
 }
