--- a/src/output.css
+++ b/src/output.css
@@ -595,6 +595,26 @@ video {
   margin-top: 0.5rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -617,6 +637,18 @@ video {
 
 .flex-grow {
   flex-grow: 1;
+}
+
+.list-inside {
+  list-style-position: inside;
+}
+
+.list-outside {
+  list-style-position: outside;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .grid-cols-1 {
@@ -652,6 +684,10 @@ video {
   border-width: 2px;
 }
 
+.border-\[1px\] {
+  border-width: 1px;
+}
+
 .border-x-2 {
   border-left-width: 2px;
   border-right-width: 2px;
@@ -661,34 +697,19 @@ video {
   border-bottom-width: 2px;
 }
 
-.border-stone-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(28 25 23 / var(--tw-border-opacity));
-}
-
 .border-\[\#020a04\] {
   --tw-border-opacity: 1;
   border-color: rgb(2 10 4 / var(--tw-border-opacity));
 }
 
-.bg-stone-50 {
+.bg-\[\#020a04\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
-}
-
-.bg-stone-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(28 25 23 / var(--tw-bg-opacity));
+  background-color: rgb(2 10 4 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#fbfef9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(251 254 249 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#020a04\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 10 4 / var(--tw-bg-opacity));
 }
 
 .px-2 {
@@ -709,6 +730,14 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .font-mono {
@@ -743,11 +772,6 @@ video {
   color: rgb(68 64 60 / var(--tw-text-opacity));
 }
 
-.text-\[\#f49097\] {
-  --tw-text-opacity: 1;
-  color: rgb(244 144 151 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -760,19 +784,14 @@ video {
   margin-top: 0.25rem;
 }
 
-.hover\:bg-stone-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(28 25 23 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-\[\#020a04\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(2 10 4 / var(--tw-bg-opacity));
 }
 
-.hover\:text-stone-50:hover {
+.hover\:text-\[\#f49097\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(250 250 249 / var(--tw-text-opacity));
+  color: rgb(244 144 151 / var(--tw-text-opacity));
 }
 
 .hover\:text-\[\#fbfef9\]:hover {
@@ -780,9 +799,9 @@ video {
   color: rgb(251 254 249 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#f49097\]:hover {
+.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
-  color: rgb(244 144 151 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -857,24 +876,9 @@ video {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:border-stone-50 {
-    --tw-border-opacity: 1;
-    border-color: rgb(250 250 249 / var(--tw-border-opacity));
-  }
-
   .dark\:border-\[\#fbfef9\] {
     --tw-border-opacity: 1;
     border-color: rgb(251 254 249 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-stone-50 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(250 250 249 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-stone-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(28 25 23 / var(--tw-bg-opacity));
   }
 
   .dark\:bg-\[\#020a04\] {
@@ -887,9 +891,9 @@ video {
     background-color: rgb(251 254 249 / var(--tw-bg-opacity));
   }
 
-  .dark\:text-stone-50 {
+  .dark\:text-\[\#fbfef9\] {
     --tw-text-opacity: 1;
-    color: rgb(250 250 249 / var(--tw-text-opacity));
+    color: rgb(251 254 249 / var(--tw-text-opacity));
   }
 
   .dark\:text-stone-700 {
@@ -897,40 +901,15 @@ video {
     color: rgb(68 64 60 / var(--tw-text-opacity));
   }
 
-  .dark\:text-\[\#fbfef9\] {
-    --tw-text-opacity: 1;
-    color: rgb(251 254 249 / var(--tw-text-opacity));
-  }
-
-  .dark\:hover\:bg-stone-50:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(250 250 249 / var(--tw-bg-opacity));
-  }
-
   .dark\:hover\:bg-\[\#fbfef9\]:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(251 254 249 / var(--tw-bg-opacity));
-  }
-
-  .dark\:hover\:text-stone-900:hover {
-    --tw-text-opacity: 1;
-    color: rgb(28 25 23 / var(--tw-text-opacity));
   }
 
   .dark\:hover\:text-\[\#020a04\]:hover {
     --tw-text-opacity: 1;
     color: rgb(2 10 4 / var(--tw-text-opacity));
   }
-
-  .hover\:dark\:text-\[\#f49097\]:hover {
-    --tw-text-opacity: 1;
-    color: rgb(244 144 151 / var(--tw-text-opacity));
-  }
-}
-
-.\[\&\>a\]\:bg-stone-50>a {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
 }
 
 .\[\&\>a\]\:bg-\[\#fbfef9\]>a {
@@ -939,11 +918,6 @@ video {
 }
 
 @media (prefers-color-scheme: dark) {
-  .dark\:\[\&\>a\]\:bg-stone-900>a {
-    --tw-bg-opacity: 1;
-    background-color: rgb(28 25 23 / var(--tw-bg-opacity));
-  }
-
   .dark\:\[\&\>a\]\:bg-\[\#020a04\]>a {
     --tw-bg-opacity: 1;
     background-color: rgb(2 10 4 / var(--tw-bg-opacity));
